Fixed padding issues within the hover. Aligned everything correctly. Changed the margins on very low resolutions in the footer. Added some spacing in the article containers in low resolutions. Added more icons to the top spanning banner. Added several media queries for super low resolutions. Added arrows to the buttons inside of the hovers.

--- a/style/Sass/components/_mixin.scss
+++ b/style/Sass/components/_mixin.scss
@@ -1,10 +1,3 @@
 @mixin dark-containers {
     padding:15px 25px;
 }
-
-
-@mixin containers() {
-    width:345px;
-    border-radius:0px;
-    margin:0px;
-}
