--- a/style/Sass/layout/_header.scss
+++ b/style/Sass/layout/_header.scss
@@ -39,6 +39,7 @@
   border:none;
   background:transparent;
   height:47px;
+  padding-left:15px;
 }
 .search-box-2:focus-visible{
   border:none;
